<resources>
    <string name="app_name">AndroidJVapp</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_catalogo">CatalogoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="preguntas">Preguntas</string>
    <string name="bueno">Bueno</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="regular">Regular</string>
    <string name="enviar">Enviar</string>
    <string name="msginicial2">Opinion sobre nuestros productos</string>
    <string name="producto">Producto</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_login">Iniciar Sesión</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="logo_login">"Logo"</string>
    <string name="text_forgot_pass">"Recuperar contraseña"</string>
    <string name="desc_forgot_pass">"Ingresa el correo electrónico asociado a tu cuenta"</string>
    <string name="action_forgotpass">Recuperar</string>
    <string name="btn_signup">Regístrate</string>
    <string name="facebook_app_id">175758713613316</string>
    <string name="fb_login_protocol_scheme">fb175758713613316</string>
    <string name="title_activity_maps">Map</string>
    <string name="continuar">Continuar</string>
    <string name="calificar">Calificar</string>
    <string name="Texo_evio_recojerTienda">RECOJER EN LA TIENDA</string>
    <string name="Texto_evio_envioDomicilio">ENVÍO A DOMICILIO</string>
    <string name="Texto_envio_metodoEnvio">ELEGIR MÉTODO DE ENVÍO</string>
    <string name="Texto_envio_tuDirreccion">Tu Dirección</string>
    <string name="Texto_envio_CambiarDireccion">CAMBIAR DIRECCIÓN</string>
    <string name="Texto_envio_TotalProducto">Total Productos</string>
    <string name="Texto_envio_CostoEnvio">Costo de Envío</string>
    <string name="Texto_envio_TotalPagar">Total a Pagar</string>
    <string name="Texto_envio_valorPro">$0</string>
    <string name="Texto_envio_valorPag">$0</string>
    <string name="Texto_envio_valoreEnv">$0</string>
    <string name="Texto_pago_ElegirMetPag">ELEGIR MÉTODO DE PAGO</string>
    <string name="Texto_pago_TarjetaCred">Tarjeta Crédito</string>
    <string name="Texto_pago_DebitoBancario">Débito Bancario</string>
    <string name="Texto_pago_Transf">Transferencias/</string>
    <string name="Texto_pago_Consigna">Consignaciones</string>
    <string name="Texto_pago_resumen">RESUMEN</string>
    <string name="Texto_pago_TotalProducto">Total Productos</string>
    <string name="Texto_pago_CostoEnvio">Costo de Envío</string>
    <string name="Texto_pago_TotalPagar">Total a Pagar</string>
    <string name="Texto_pago_valorPro">$0</string>
    <string name="Texto_pago_valorPag">$0</string>
    <string name="Texto_pago_valoreEnv">$0</string>



</resources>
