<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".EncuestaP">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="380dp"
        android:layout_height="83dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/texttop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/msgtext1"
            android:gravity="center"
            android:text="@string/msginicial2"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="293dp"
        android:layout_height="185dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/producto"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/npersona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/msgtext3"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="237dp"
        android:layout_height="40dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="84dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/bueno" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/regular" />
    </LinearLayout>

    <Button
        android:id="@+id/enviar2"
        android:layout_width="126dp"
        android:layout_height="50dp"
        android:layout_marginStart="126dp"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/button_back"
        android:gravity="center"
        android:onClick="onCreate"
        android:text="@string/enviar"
        android:textColor="#FFFFFF"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>