<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ligth_blue"
    tools:context=".envio">

    <Button
        android:id="@+id/ubicacion"
        android:layout_width="180dp"
        android:layout_height="36.65dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_submit"
        android:text="CAMBIAR DIRECCION"
        android:textColor="@color/BotonLtra"
        app:layout_constraintBottom_toTopOf="@+id/imageView45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/light_toolbar"
        android:elevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_navbar_mobile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/carrito"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:background="@drawable/ic_cart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView5"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="160dp"
                android:layout_height="32dp"
                android:text="Pedido Realizado"
                android:textColor="@color/dark_green"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.423"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.946"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/photo_example" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/base_ptll_1" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="364dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_rectangulo_894" />

    <Button
        android:id="@+id/pagoVista"
        android:layout_width="90dp"
        android:layout_height="36.65dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/button_submit"
        android:text="PAGAR"
        android:textColor="@color/BotonLtra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button18"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button18"
        android:layout_width="90dp"
        android:layout_height="35.65dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_back"
        android:text="REGRESAR"
        android:textColor="@color/BotonLtra"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button17"
        tools:ignore="NotSibling" />

    <ImageView
        android:id="@+id/imageView37"
        android:layout_width="325dp"
        android:layout_height="100dp"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/card_backgroud" />

    <ImageView
        android:id="@+id/imageView43"
        android:layout_width="325dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView37"
        app:srcCompat="@drawable/card_backgroud" />

    <ImageView
        android:id="@+id/imageView44"
        android:layout_width="325dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView43"
        app:srcCompat="@drawable/card_backgroud" />

    <ImageView
        android:id="@+id/imageView39"
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:layout_marginStart="64dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView43"
        app:layout_constraintStart_toStartOf="@+id/imageView43"
        app:layout_constraintTop_toTopOf="@+id/imageView43"
        app:srcCompat="@drawable/logistico" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Texto_evio_envioDomicilio"
        android:textColor="@color/TitulomMenu"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView43"
        app:layout_constraintEnd_toEndOf="@+id/imageView43"
        app:layout_constraintStart_toEndOf="@+id/imageView39"
        app:layout_constraintTop_toTopOf="@+id/imageView43" />


    <ImageView
        android:id="@+id/imageView45"
        android:layout_width="325dp"
        android:layout_height="110dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/card_backgroud" />

    <TextView
        android:id="@+id/textView63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/Texto_envio_valoreEnv"
        android:textColor="@color/TitulomMenu"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView45"
        app:layout_constraintTop_toBottomOf="@+id/textView62" />

    <TextView
        android:id="@+id/textView64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/Texto_envio_TotalPagar"
        android:textColor="@color/TitulomMenu"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/imageView45"
        app:layout_constraintTop_toBottomOf="@+id/textView67" />

    <TextView
        android:id="@+id/textView67"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/Texto_envio_CostoEnvio"
        android:textColor="@color/TitulomMenu"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/imageView45"
        app:layout_constraintTop_toBottomOf="@+id/textView65" />

    <TextView
        android:id="@+id/textView65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/Texto_envio_TotalProducto"
        android:textColor="@color/TitulomMenu"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/imageView45"
        app:layout_constraintTop_toTopOf="@+id/imageView45" />

    <TextView
        android:id="@+id/textView62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/Texto_envio_valorPro"
        android:textColor="@color/TitulomMenu"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView45"
        app:layout_constraintTop_toTopOf="@+id/imageView45" />

    <TextView
        android:id="@+id/textView66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/Texto_envio_valorPag"
        android:textColor="@color/TitulomMenu"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView45"
        app:layout_constraintTop_toBottomOf="@+id/textView63" />


    <ImageView
        android:id="@+id/imageView46"
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:layout_marginStart="64dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView37"
        app:layout_constraintStart_toStartOf="@+id/imageView37"
        app:layout_constraintTop_toTopOf="@+id/imageView37"
        app:srcCompat="@drawable/shop" />

    <TextView
        android:id="@+id/textView60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Texo_evio_recojerTienda"
        android:textColor="@color/TitulomMenu"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView37"
        app:layout_constraintEnd_toEndOf="@+id/imageView37"
        app:layout_constraintStart_toEndOf="@+id/imageView46"
        app:layout_constraintTop_toTopOf="@+id/imageView37" />

    <TextView
        android:id="@+id/textView61"
        android:layout_width="250dp"
        android:layout_height="15dp"
        android:text="Cll. 132 #49-39 Bogotá,Colombia"
        android:textAlignment="center"
        android:textColor="@color/TitulomMenu"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView44"
        app:layout_constraintEnd_toEndOf="@+id/imageView44"
        app:layout_constraintStart_toStartOf="@+id/imageView44"
        app:layout_constraintTop_toTopOf="@+id/imageView44" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/Texto_envio_tuDirreccion"
        android:textColor="@color/TitulomMenu"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView44"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/Texto_envio_metodoEnvio"
        android:textColor="@color/TitulomMenu"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView37"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>