<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#68D2D5"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="328dp"
        android:layout_height="105dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/msgtext2"
        android:contentDescription="@string/logo_login"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/card_login_logo" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="167dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bck_text_2"
        android:contentDescription="@string/title_login"
        android:fontFamily="@font/montserrat"
        android:text="Iniciar sesión"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/form_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_login" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form_login"
        android:layout_width="413dp"
        android:layout_height="200dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="296dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        >

        <ImageView
            android:id="@+id/back_login_form"
            android:layout_width="316dp"
            android:layout_height="147dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="46dp"
            android:layout_marginBottom="18dp"
            android:contentDescription="@string/title_login"
            app:layout_constraintBottom_toTopOf="@+id/button_RecuperarPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.285"
            app:srcCompat="@drawable/card_backgroud" />

        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_width="275dp"
            android:layout_height="39dp"
            android:layout_marginTop="32dp"
            android:autofillHints="@string/prompt_email"
            android:background="@drawable/bck_text"
            android:contentDescription="@string/prompt_email"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:textColor="#054143"
            android:hint="Correo electrónico"
            android:inputType="textEmailAddress"
            android:labelFor="@id/EditTextEmail"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/back_login_form"
            app:layout_constraintStart_toStartOf="@+id/back_login_form"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="39dp"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/prompt_password"
            android:background="@drawable/bck_text"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:labelFor="@id/password"
            android:textAlignment="center"
            android:textColor="#054143"
            app:layout_constraintBottom_toTopOf="@+id/button_RecuperarPass"
            app:layout_constraintEnd_toEndOf="@+id/EditTextEmail"
            app:layout_constraintStart_toStartOf="@+id/EditTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/EditTextEmail" />

        <Button
            android:id="@+id/button_registrar"
            android:layout_width="103dp"
            android:layout_height="36dp"
            android:layout_marginStart="153dp"
            android:layout_marginEnd="157dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/button_submit"
            android:fontFamily="@font/roboto_light"
            android:text="@string/action_sign_in"
            android:textColor="@color/dark_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonSingup"
        android:layout_width="114dp"
        android:layout_height="46dp"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/button_back"
        android:fontFamily="@font/roboto_light"
        android:text="@string/btn_signup"
        android:textColor="@color/ligth_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_forgot_pass"
        android:layout_width="238dp"
        android:layout_height="19dp"
        android:background="#00FFFFFF"
        android:clickable="false"
        android:contentDescription="@string/text_forgot_pass"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/text_forgot_pass"
        android:textAlignment="center"
        android:textColor="#054143"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_login" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_forgot_pass"
        app:layout_constraintVertical_bias="0.656" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_button_google"
        android:layout_width="130dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_forgot_pass"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="316dp"
        android:layout_height="72dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/card_backgroud" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="¿Aún no tienes una cuenta?"
        android:textColor="#054143"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView23"
        app:layout_constraintStart_toStartOf="@+id/imageView23"
        app:layout_constraintTop_toTopOf="@+id/imageView23" />

    <ImageButton
        android:id="@+id/login_button_fingerprint"
        android:layout_width="96dp"
        android:layout_height="95dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/ic_action_fingerprint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/button_forgot_pass" />

</androidx.constraintlayout.widget.ConstraintLayout>